fixed gallery slide problem on mobile

--- a/css/basic/basic.css
+++ b/css/basic/basic.css
@@ -40,7 +40,7 @@ img {
 }
 
 input {
-    border-radius: 5px;
+    border-radius: 4px;
 }
 
 select {
