--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -2,17 +2,17 @@
     background-color: var(--dark);
     position: absolute;
     z-index: 1;
-    transition: transform 0.7s;
+    transition: transform 0.8s;
     margin: 0 auto;
     /* height: fit-content; */
 }
 
 .slide-down {
-    transform: translateY(200%);
+    transform: translateY(150%);
 }
 
 .lock {
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .gallery-image {
